syntax="proto3";

package raft;
option java_package = "com.wenweihu86.raft.proto";
option java_outer_classname = "Raft";

enum EntryType {
    ENTRY_TYPE_DATA = 0;
    ENTRY_TYPE_CONFIGURATION= 1;
};

message LogEntry {
    int64 log_index = 1;
    int64 term = 2;
    EntryType type = 3;
    int64 data_len = 4;
    bytes data = 5;
};

message VoteRequest {
    int64 term = 1; // 候选人的任期号
    int32 candidate_id = 2; // 请求选票的候选人的 Id
    int64 last_log_term = 3; // 候选人的最后日志条目的索引值
    int64 last_log_index = 4; // 候选人最后日志条目的任期号
};

message VoteResponse {
    int64 term = 1; // 当前任期号，以便于候选人去更新自己的任期号
    bool vote_granted = 2; // 候选人赢得了此张选票时为真
};

message AppendEntriesRequest {
    int64 term = 1; // 领导人的任期号
    int32 leader_id = 2; // 领导人的Id
    int64 prev_log_index = 3; // 新的日志条目紧随之前的索引值
    int64 prev_log_term = 4; // prev_log_index条目的任期号
    LogEntry entries = 5; // 准备存储的日志条目（表示心跳时为空）
    int64 leader_committed_index = 6; // 领导人已经提交的日志的索引值
};

message AppendEntriesResponse {
    int64 term = 1; // 当前的任期号，用于领导人去更新自己
    bool success = 2; // 跟随者包含了匹配上 prevLogIndex 和 prevLogTerm 的日志时为真
};

message LogMetaData {
    uint64 current_term = 1;
    uint64 voted_for = 2;
    uint64 entries_start = 3;
}

